--- a/octoprint/static/css/octoprint.less
+++ b/octoprint/static/css/octoprint.less
@@ -358,6 +358,21 @@ ul.dropdown-menu li a {
 
 #webcam_container {
   width: 100%;
+
+  .flipH {
+    -webkit-transform: scaleX(-1);
+    -moz-transform: scaleX(-1);
+  }
+
+  .flipV {
+    -webkit-transform: scaleY(-1);
+    -moz-transform: scaleY(-1);
+  }
+
+  .flipH.flipV {
+    -webkit-transform: scaleX(-1) scaleY(-1);
+    -moz-transform: scaleX(-1) scaleY(-1);
+  }
 }
 
 /** GCODE file manager */
@@ -420,21 +435,36 @@ ul.dropdown-menu li a {
 
 }
 
+/** Terminal output */
+
+#term {
+  #terminal-output {
+    min-height: 340px;
+  }
+}
+
 /** Settings dialog */
 #settings_dialog {
 }
 
 /** Footer */
 .footer {
-  text-align: right;
+  ul {
+    margin: 0;
 
-  ul li {
-    display: inline;
-    margin-left: 1em;
-    font-size: 85%;
-    a {
-      color: #555;
+    li {
+      &:first-child {
+        margin-left: 0;
+      }
+
+      display: inline;
+      margin-left: 1em;
+      font-size: 85%;
+      a {
+        color: #555;
+      }
     }
+
   }
 }
 
@@ -571,4 +601,10 @@ ul.dropdown-menu li a {
       }
     }
   }
+}
+
+.icon-sd-black-14 {
+  background: url("../img/icon-sd-black-14.png") 0 3px no-repeat;
+  width: 11px;
+  height: 17px;
 }
